# CPU-Cache-Simulator

./: README.md
Cache_Simulator/: CMakeLists.txt  a.out
Cache_Simulator/include/: AddressParts.h  CacheLine.h  Decoder.h  Loader.h  WritePolicy.h  cache.h  memory.h
Cache_Simulator/src/: Decoder.cpp  Loader.cpp  cache.cpp  main.cpp  memory.cpp
Cache_Simulator/src/policy/: write_through_policy.cpp
Cache_Simulator/tools/: generate_trace.cpp
Cache_Simulator/traces/: trace.txt
